# requester

./: README.md  pyproject.toml
src/requester/: requester.py
tests/: test_requester.py
